--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,6 +482,7 @@
     "# separate dataset into train and test\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n",
+    "\n",
     "X_train.shape, X_test.shape"
    ]
   },
@@ -495,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -510,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -522,118 +523,118 @@
      "text": [
       "Linear Regression\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.3231\n",
-      "- Mean Absolute Error: 4.2667\n",
-      "- R2 Score: 0.8743\n",
+      "- Root Mean Squared Error: 5.323050852720513\n",
+      "- Mean Absolute Error: 4.266711846071957\n",
+      "- R2 Score: 0.8743172040139593\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.3940\n",
-      "- Mean Absolute Error: 4.2148\n",
-      "- R2 Score: 0.8804\n",
+      "- Root Mean Squared Error: 5.393993869732842\n",
+      "- Mean Absolute Error: 4.21476314247485\n",
+      "- R2 Score: 0.8804332983749565\n",
       "===================================\n",
       "\n",
       "\n",
       "Lasso\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 6.5938\n",
-      "- Mean Absolute Error: 5.2063\n",
-      "- R2 Score: 0.8071\n",
+      "- Root Mean Squared Error: 6.593815587795565\n",
+      "- Mean Absolute Error: 5.206302661246526\n",
+      "- R2 Score: 0.8071462015863458\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.5197\n",
-      "- Mean Absolute Error: 5.1579\n",
-      "- R2 Score: 0.8253\n",
+      "- Root Mean Squared Error: 6.519694535667419\n",
+      "- Mean Absolute Error: 5.157881810347763\n",
+      "- R2 Score: 0.8253197323627853\n",
       "===================================\n",
       "\n",
       "\n",
       "Ridge\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.3233\n",
-      "- Mean Absolute Error: 4.2650\n",
-      "- R2 Score: 0.8743\n",
+      "- Root Mean Squared Error: 5.323324922741654\n",
+      "- Mean Absolute Error: 4.264987823725981\n",
+      "- R2 Score: 0.8743042615212909\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.3904\n",
-      "- Mean Absolute Error: 4.2111\n",
-      "- R2 Score: 0.8806\n",
+      "- Root Mean Squared Error: 5.390387016935638\n",
+      "- Mean Absolute Error: 4.21110068801426\n",
+      "- R2 Score: 0.8805931485028738\n",
       "===================================\n",
       "\n",
       "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7079\n",
-      "- Mean Absolute Error: 4.5168\n",
-      "- R2 Score: 0.8555\n",
+      "- Root Mean Squared Error: 5.707884897227694\n",
+      "- Mean Absolute Error: 4.51675\n",
+      "- R2 Score: 0.8554876322327585\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.2530\n",
-      "- Mean Absolute Error: 5.6210\n",
-      "- R2 Score: 0.7838\n",
+      "- Root Mean Squared Error: 7.253040741647602\n",
+      "- Mean Absolute Error: 5.621\n",
+      "- R2 Score: 0.7838129945787431\n",
       "===================================\n",
       "\n",
       "\n",
       "Decision Tree\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 0.2795\n",
-      "- Mean Absolute Error: 0.0187\n",
-      "- R2 Score: 0.9997\n",
+      "- Root Mean Squared Error: 0.2795084971874737\n",
+      "- Mean Absolute Error: 0.01875\n",
+      "- R2 Score: 0.9996534669718089\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 8.0455\n",
-      "- Mean Absolute Error: 6.4400\n",
-      "- R2 Score: 0.7340\n",
+      "- Root Mean Squared Error: 7.9796616469622315\n",
+      "- Mean Absolute Error: 6.385\n",
+      "- R2 Score: 0.73832736633429\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.3361\n",
-      "- Mean Absolute Error: 1.8421\n",
-      "- R2 Score: 0.9758\n",
+      "- Root Mean Squared Error: 2.2773594349472304\n",
+      "- Mean Absolute Error: 1.8233760416666667\n",
+      "- R2 Score: 0.976995236942314\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0545\n",
-      "- Mean Absolute Error: 4.6980\n",
-      "- R2 Score: 0.8494\n",
+      "- Root Mean Squared Error: 6.030196440349008\n",
+      "- Mean Absolute Error: 4.6637755952380955\n",
+      "- R2 Score: 0.8505650192933057\n",
       "===================================\n",
       "\n",
       "\n",
       "XGBRegressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 1.0073\n",
-      "- Mean Absolute Error: 0.6875\n",
-      "- R2 Score: 0.9955\n",
+      "- Root Mean Squared Error: 1.0072816737145132\n",
+      "- Mean Absolute Error: 0.687466561794281\n",
+      "- R2 Score: 0.9954995512962341\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.4733\n",
-      "- Mean Absolute Error: 5.0577\n",
-      "- R2 Score: 0.8278\n",
+      "- Root Mean Squared Error: 6.47330716071189\n",
+      "- Mean Absolute Error: 5.057730674743652\n",
+      "- R2 Score: 0.8277965784072876\n",
       "===================================\n",
       "\n",
       "\n",
       "CatBoosting Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 3.0427\n",
-      "- Mean Absolute Error: 2.4054\n",
-      "- R2 Score: 0.9589\n",
+      "- Root Mean Squared Error: 3.042664195326799\n",
+      "- Mean Absolute Error: 2.405393926779502\n",
+      "- R2 Score: 0.9589358676277713\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0086\n",
-      "- Mean Absolute Error: 4.6125\n",
-      "- R2 Score: 0.8516\n",
+      "- Root Mean Squared Error: 6.008631956907363\n",
+      "- Mean Absolute Error: 4.612531714976557\n",
+      "- R2 Score: 0.8516318920747058\n",
       "===================================\n",
       "\n",
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.8078\n",
-      "- Mean Absolute Error: 4.7444\n",
-      "- R2 Score: 0.8504\n",
+      "- Root Mean Squared Error: 5.77162323119897\n",
+      "- Mean Absolute Error: 4.706960541522923\n",
+      "- R2 Score: 0.8522421548220303\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 5.9919\n",
-      "- Mean Absolute Error: 4.6555\n",
-      "- R2 Score: 0.8525\n",
+      "- Root Mean Squared Error: 5.959612993681184\n",
+      "- Mean Absolute Error: 4.551742103273599\n",
+      "- R2 Score: 0.8540428184189031\n",
       "===================================\n",
       "\n",
       "\n"
@@ -673,16 +674,16 @@
     "    model_list.append(list(models.keys())[i])\n",
     "    \n",
     "    print('Model performance for Training set')\n",
-    "    print(\"- Root Mean Squared Error: {:.4f}\".format(model_train_rmse))\n",
-    "    print(\"- Mean Absolute Error: {:.4f}\".format(model_train_mae))\n",
-    "    print(\"- R2 Score: {:.4f}\".format(model_train_r2))\n",
+    "    print(f\"- Root Mean Squared Error: {model_train_rmse}\")\n",
+    "    print(f\"- Mean Absolute Error: {model_train_mae}\")\n",
+    "    print(f\"- R2 Score: {model_train_r2}\")\n",
     "\n",
     "    print('----------------------------------')\n",
     "    \n",
     "    print('Model performance for Test set')\n",
-    "    print(\"- Root Mean Squared Error: {:.4f}\".format(model_test_rmse))\n",
-    "    print(\"- Mean Absolute Error: {:.4f}\".format(model_test_mae))\n",
-    "    print(\"- R2 Score: {:.4f}\".format(model_test_r2))\n",
+    "    print(f\"- Root Mean Squared Error: {model_test_rmse}\")\n",
+    "    print(f\"- Mean Absolute Error: {model_test_mae}\")\n",
+    "    print(f\"- R2 Score: {model_test_r2}\")\n",
     "    \n",
     "    r2_list.append(model_test_r2)\n",
     "    \n",
@@ -700,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -743,7 +744,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.852456</td>\n",
+       "      <td>0.854043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -753,7 +754,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.849356</td>\n",
+       "      <td>0.850565</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -773,7 +774,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.733992</td>\n",
+       "      <td>0.738327</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -783,16 +784,16 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.880433\n",
-       "8       AdaBoost Regressor  0.852456\n",
+       "8       AdaBoost Regressor  0.854043\n",
        "7    CatBoosting Regressor  0.851632\n",
-       "5  Random Forest Regressor  0.849356\n",
+       "5  Random Forest Regressor  0.850565\n",
        "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
        "3    K-Neighbors Regressor  0.783813\n",
-       "4            Decision Tree  0.733992"
+       "4            Decision Tree  0.738327"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -841,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -864,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -893,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1013,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
